--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "backgroundColor": "#313b6b",  
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
